// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge rendering color variations should render with danger colors 1`] = `
.circuit-0 {
  border-radius: 999999px;
  color: #FFFFFF;
  display: inline-block;
  padding: 0 8px;
  font-size: 12px;
  line-height: 20px;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  background-color: #DB4D4D;
}

<div
  class="circuit-0 circuit-1"
/>
`;

exports[`Badge rendering color variations should render with primary colors 1`] = `
.circuit-0 {
  border-radius: 999999px;
  color: #FFFFFF;
  display: inline-block;
  padding: 0 8px;
  font-size: 12px;
  line-height: 20px;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  background-color: #3388FF;
}

<div
  class="circuit-0 circuit-1"
/>
`;

exports[`Badge rendering color variations should render with success colors 1`] = `
.circuit-0 {
  border-radius: 999999px;
  color: #FFFFFF;
  display: inline-block;
  padding: 0 8px;
  font-size: 12px;
  line-height: 20px;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  background-color: #8CC13F;
}

<div
  class="circuit-0 circuit-1"
/>
`;

exports[`Badge rendering color variations should render with warning colors 1`] = `
.circuit-0 {
  border-radius: 999999px;
  color: #FFFFFF;
  display: inline-block;
  padding: 0 8px;
  font-size: 12px;
  line-height: 20px;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  background-color: #D8A413;
}

<div
  class="circuit-0 circuit-1"
/>
`;

exports[`Badge should have hover/active styles only when the onClick handler is provided 1`] = `
.circuit-0 {
  border-radius: 999999px;
  color: #FFFFFF;
  display: inline-block;
  padding: 0 8px;
  font-size: 12px;
  line-height: 20px;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  background-color: #9DA7B1;
  border: 0;
  outline: 0;
  cursor: pointer;
}

.circuit-0:hover {
  background-color: #5C656F;
}

.circuit-0:active {
  background-color: #212933;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

<div
  class="circuit-0 circuit-1"
/>
`;

exports[`Badge should have the correct circle styles 1`] = `
.circuit-0 {
  border-radius: 999999px;
  color: #FFFFFF;
  display: inline-block;
  padding: 0 8px;
  font-size: 12px;
  line-height: 20px;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  background-color: #9DA7B1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 24px;
  width: 24px;
}

<div
  class="circuit-0 circuit-1"
/>
`;

exports[`Badge should render with default styles 1`] = `
.circuit-0 {
  border-radius: 999999px;
  color: #FFFFFF;
  display: inline-block;
  padding: 0 8px;
  font-size: 12px;
  line-height: 20px;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  background-color: #9DA7B1;
}

<div
  class="circuit-0 circuit-1"
/>
`;
